name:                inttable
version:             0
synopsis:            Integer-keyed mutable hash tables
homepage:            https://github.com/bos/inttable
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan
maintainer:          bos@serpentine.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     IntTable IntMap
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4
  default-language:    Haskell98
