name:                inttable
version:             0
synopsis:            Integer-keyed mutable hash tables
homepage:            https://github.com/bos/inttable
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan
maintainer:          bos@serpentine.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     IntTable IntMap
  other-modules:       Arr IntArr
  ghc-options:         -O2 -Wall -fspec-constr-threshold=450
  build-depends:       base >= 4, ghc-prim
  default-language:    Haskell98

benchmark benchmarks
  default-language: Haskell98
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Benchmarks.hs
  ghc-options:    -O2 -rtsopts -fspec-constr-threshold=450

  build-depends:
    base >= 4 && < 5,
    criterion >= 0.8,
    inttable,
    mwc-random,
    vector
